# Bomber-for-android

./: .gitignore  AndroidManifest.xml  BUILD  README  TODO  build.xml
bomber/: AUTHORS  CMakeLists.txt  Doxyfile  README.themes
bomber/pictures/: hisc-app-bomber.svgz
bomber/src/: CMakeLists.txt  board.cpp  board.h  bomber.cpp  bomber.desktop  bomber.kcfg  bomberui.rc  building.cpp  plane.h
bomber/themes/: Lava-Island.svgz  kbomber.svgz
reference/: .directory  BUGS  Changelog  Messages.sh  TODO  VERSION
reference/pictures/: .directory
reference/sounds/: .directory  CMakeLists.txt
reference/src/: .directory  bomb.cpp  bomb.h  bomber.h  bomberwidget.cpp  bomberwidget.h  building.h  explodable.cpp  explodable.h  main.cpp  plane.cpp  settings.kcfgc
reference/themes/: .directory  CMakeLists.txt  Lava-Island.desktop  kbomber.desktop
res/values/: strings.xml
res/values-fr/: strings.xml
res/xml/: preferences.xml
src/org/beide/bomber/: BomberActivity.java  BomberPreferences.java  BomberThread.java  BomberView.java
